fixed the text wrapping issues by applying the wrap to just the sidebar and removing it from the body.

--- a/src/styles/modules/metricCards.css
+++ b/src/styles/modules/metricCards.css
@@ -13,7 +13,7 @@
 
 .card{
     /* background: rgb(9, 5, 37); */
-    block-size: 115px;
+    /* block-size: 115px; */
     display: flex;
     gap: 16px;
     padding: 16px;
